# B2Ktautau

./: .gitmodules  DECAY_FIT.C  DECAY_FIT3.C  DECAY_FIT_Penalty.C  DTF_TRUE_comparison.C  KTauTau_Kinematics.py  TMVARegression.C  TMVA_selection.C  analytic_constraint.cc  analytic_reconstruction.C  autoWrite_ntuple_options_files.py  backgrounds.cpp  bdt_corr_with_bmass.C  bdt_reweighter.py  best_candidate_selection_plots.C  bias_DTF.C  branching_fraction_inputs.py  change_vars.py  compare.C  compare_MC_sWeighted_data.C  compare_fits.C  compare_vars.C  compare_vars_norm.C  compare_years.C  comparison.C  compute_B_yield.C  createDataset.C  create_MC_component_branch.C  create_cocktail_MC_component_branch.C  create_invariant_mass_tree.C  create_merged_root_from_dataset.C  create_post_selection_tree.C  create_pre_sel_tree.C  decay_fit.C  decay_fit1.C  decay_fit2.C  decay_fit_P6piK.C  decay_fit_Penalty.C  decay_fit_gsl.py  decay_fit_gsl_1missing_particle.py  (+45 more)
B2Ktautau_stripping_filters/: Conditions.py  DVHistos.root  FilterB2KTauTau-S21r0p2-dst.py  FilterB2KTauTau-S21r1p2-dst.py  FilterB2KTauTau-S24r2-dst.py  FilterB2KTauTau-S28r2-dst.py  FilterB2KTauTau-S29r2p1-dst.py  FilterB2KTauTau-S34r0p1-dst.py  LoadDSTs.py  dumpfsr2016.check.output.txt  test_catalog.xml
DaVinciDev/: CMakeLists.txt  run  searchPath.py
DaVinciDev/Phys/DecayTreeFitter/: CMakeLists.txt
DaVinciDev/Phys/DecayTreeFitter/DecayTreeFitter/: ChiSquare.h  Fitter.h
DaVinciDev/Phys/DecayTreeFitter/src/: Constraint.cpp  ConvertedPhoton.h  DecayChain.cpp  DecayChain.h  FitParams.h  Fitter.cpp  HelixUtils.cpp  HelixUtils.h  InteractionPoint.cpp  InternalParticle.cpp  InternalParticle.h  InternalRecoTrack.cpp  JetMomentum.cpp  JetMomentum.h  KalmanCalculator.cpp  MergedConstraint.h  MissingParticle.cpp  MissingParticle.h  ParticleBase.cpp  ParticleBase.h  Projection.h  RecoComposite.h  RecoMergedPi0.h  RecoParticle.cpp  RecoPhoton.cpp  RecoPhoton.h  RecoTrack.h  Resonance.cpp  VtxErrCode.cpp
DaVinciDev/Phys/DecayTreeTuple/: CMakeLists.txt
DaVinciDev/Phys/DecayTreeTuple/doc/: release.notes
DaVinciDev/Phys/DecayTreeTuple/src/: B2KtautauDTF.cpp  B2KtautauDTF.h  B2KtautauDTF1.cpp  B2KtautauDTF1.h  B2KtautauDTF2.cpp  B2KtautauDTF2.h  TupleToolBremInfo.cpp  TupleToolCorrectedMass.cpp  TupleToolCorrectedMass.h  TupleToolDecayFit.cpp  TupleToolDecayFit.h  TupleToolDecayFit1.cpp  TupleToolDecayFit1.h  TupleToolDecayFit2.cpp  TupleToolDecayFit2.h  TupleToolDecayFit_DDK.cpp  TupleToolDecayFit_DDK.h  TupleToolDecayTreeFitter.cpp  TupleToolDecayTreeFitter.h  TupleToolIsoGeneric.cpp  TupleToolIsolationTwoBody.cpp  TupleToolKTauTauDTFLowChi2.cpp  TupleToolKTauTauDTFLowChi2.h  TupleToolKTauTauDTFSequential.cpp  TupleToolKTauTauDTFSequential.h  TupleToolKTauTauDTFSequential_DDK.cpp  TupleToolKTauTauDTFSequential_DDK.h  TupleToolKTauTauDTF_MLP.cpp  TupleToolKTauTauDTF_MLP.h  TupleToolKtautauDTF.cpp  TupleToolKtautauDTF.h  TupleToolPhotonInfo.h  TupleToolTwoParticleMatching.h  TupleToolVtxDaughters.h
DaVinciDev/Phys/DecayTreeTuple/tests/: test_configuration_methods.py
DaVinciDev/trash/: B2KtautauDTF.h  Fitter.cpp
DaVinciDev_KTautau/: .git-lb-checkout  CMakeLists.txt  Makefile  build.conf  run  toolchain.cmake
DaVinciDev_KTautau/Phys/DecayTreeTuple/: CMakeLists.txt
DaVinciDev_KTautau/trash/: B2KtautauDTF.cpp  Fitter.h
Final_fit/: autoWrite_config_yml_files.py  autoWrite_xml_files.py  bdt_dependent_inputs.py  bdt_independent_inputs.py  branching_fraction_inputs.py  combinatorial_yield_validation.py  create_fit_templates.py  do_all.py  fit.py  fit_inputs.py  generate_fit_templates.py  generate_histograms.py  generate_toy_data.py  signal_toys_bf.py  template_shapes_choice.py  toy_studies.py  upper_limit_optimisation.py  validate_toy_generation.py
PIDCalib/: correct_pid.py  pid_resampling.py  pid_resampling_ktautau.py
Scikit_learn/: selection.py  transform_tree_to_pandas.py
Scikit_learn/Pandas/: mc_2018_forSelections.csv  mc_2018_taum_kinematic.csv
Sklearn/: bdt_corr_with_bmass.C  compute_sklearn_response.py  make_sklearn_training.py  sklearn_plots.py
TMVA/: TMVA_BDT_output.C  TMVA_compare.C  TMVA_response.C  TMVA_training.C  compare_BDTs.C
TriggerCorr/: L0Hadron_TOS_trigger_corr.C
(+40 files in other folders)
